Stubbed buttons/textView for GetHelpActivity; untested

--- a/app/src/main/res/layout/activity_get_help.xml
+++ b/app/src/main/res/layout/activity_get_help.xml
@@ -2,5 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:id="@+id/GetSTHelpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Short-Term Help" />
+    <Button
+        android:id="@+id/GetLTHelpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Long-Term Help" />
+
+    <TextView
+        android:id="@+id/CopingStratStr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dip"
+        android:padding="10dip"
+        android:text="foo"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
 
 </LinearLayout>
