--- a/app/src/main/res/layout/activity_log_mood.xml
+++ b/app/src/main/res/layout/activity_log_mood.xml
@@ -61,4 +61,11 @@
         android:layout_height="wrap_content"
         android:text="Back" />
 
+    <Spinner
+        android:id="@+id/spinnerStrategy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
+
 </LinearLayout>
