--- a/app/src/main/res/layout/nav_header_splash_screen.xml
+++ b/app/src/main/res/layout/nav_header_splash_screen.xml
@@ -19,7 +19,7 @@
         <!--android:src="@android:drawable/sym_def_app_icon" />-->
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Galvanique - Mood Tracker"
