--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -1,6 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/my_relative_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    tools:context=".PreferencesActivity"
+    android:background="#d20a25"
     android:orientation="vertical">
 
     <Button
