--- a/app/src/main/res/layout/activity_log_mood.xml
+++ b/app/src/main/res/layout/activity_log_mood.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rsv="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <TextView
         android:id="@+id/textViewInstructions"
@@ -46,7 +56,7 @@
         android:layout_marginTop="50dp"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        rsv:filledColor="#FF6600"
+        rsv:filledColor="#0066ff"
         rsv:rangeCount="10" />
 
     <Spinner
