clark: I think I fixed that bug. there was no spinner in the xml layout

--- a/app/src/main/res/layout/activity_view_update_history.xml
+++ b/app/src/main/res/layout/activity_view_update_history.xml
@@ -14,6 +14,13 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
