--- a/app/src/main/res/menu/activity_splash_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_splash_screen_drawer.xml
@@ -23,9 +23,9 @@
             android:icon="@drawable/ic_menu_send"
             android:title="View/Update History" />
         <item
-            android:id="@+id/nav_app_prefs"
+            android:id="@+id/nav_app_gsr"
             android:icon="@drawable/ic_menu_send"
-            android:title="App Preferences" />
+            android:title="GSR Logging" />
     </group>
 
 </menu>
